<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Mexico">Proudly Mexican</string>
    <string name="about_icons">Icons</string>
    <string name="about_ins">Inspiration</string>
    <string name="about_others">Others</string>
    <string name="about_projects">Used libraries</string>
    <string name="about_social">Follow the developer on Instagram</string>
    <string name="add">Add a site</string>
    <string name="add_description">Description</string>
    <string name="add_history">Brief history</string>
    <string name="add_mes">Fill the following fields to edit</string>
    <string name="add_step1">Step 1</string>
    <string name="add_step1_ins">Press the button and look for the site you want to add, then select it</string>
    <string name="add_step2">Step 2</string>
    <string name="add_step2_ins">Fill in the following fields to known a little more about</string>
    <string name="add_title">Edit site</string>
    <string name="alert_av">Notice</string>
    <string name="alert_back">Press again to exit</string>
    <string name="alert_call">Do you want to make a call?</string>
    <string name="alert_cancel">Decline</string>
    <string name="alert_change">Change profile picture</string>
    <string name="alert_mail">Do you want to contact us?</string>
    <string name="alert_mes">What would you like to do?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_watch">View photo</string>
    <string name="alerts_empty1">No sites found near</string>
    <string name="alerts_notsaved">You have not saved sites</string>
    <string name="alerts_notsavedmes">Add one</string>
    <string name="app_name">Sites</string>
    <string name="btn_finish">Finish</string>
    <string name="deleted">Erased!</string>
    <string name="detail_map">See on map</string>
    <string name="detail_phone">This site does not have a telephonic number</string>
    <string name="detail_web">This site does not have a website</string>
    <string name="edit">Edit</string>
    <string name="empty" />
    <string name="errorMail">"Oh no! that's not a valid mail"</string>
    <string name="errorSignUpP">Oh no! passwords must be equal to and greater than 8 characters</string>
    <string name="errorSignUpP3">The user already exists, login please</string>
    <string name="errorUser">It seems that the user name is not complete</string>
    <string name="error_empty">It seems that something is missing here</string>
    <string name="finish">Congratulations</string>
    <string name="finish2">has been added correctly.</string>
    <string name="home_account">Near me</string>
    <string name="home_saved">Saved</string>
    <string name="intro_login">Login</string>
    <string name="intro_signup">Sign Up</string>
    <string name="location">To see the sites near you, you must activate the location</string>
    <string name="login_error">Sorry, an unexpected error has occurred</string>
    <string name="login_error2">The email or the password is incorrect</string>
    <string name="login_next">Go</string>
    <string name="login_password">Password</string>
    <string name="login_too">Or access with:</string>
    <string name="mail_subject">Contact from Sites</string>
    <string name="menu_about">About</string>
    <string name="menu_call">Call</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_log_out">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_web">Website</string>
    <string name="old_error">Your old password does not match</string>
    <string name="open">Open with</string>
    <string name="photo_error">You must add an image</string>
    <string name="saved">Saved!</string>
    <string name="search">Search</string>
    <string name="send_mail">Send with</string>
    <string name="settings_info">Personal information</string>
    <string name="settings_uid">User ID</string>
    <string name="settings_user">Username</string>
    <string name="share1">I have found a great site in site called</string>
    <string name="share2">"and it's located in"</string>
    <string name="share_with">Share with…</string>
    <string name="signup">Add a picture for customize your profile</string>
    <string name="signup_NoAC">"Don't you have an account?"</string>
    <string name="signup_mail">Email</string>
    <string name="signup_next">Next</string>
    <string name="signup_rep">Repeat your password</string>
    <string name="site_infox">Site information</string>
    <string name="site_location">Address</string>
    <string name="state_title1">"Here's empty"</string>
    <string name="sub_frag1">Find sites near you, meet its history and be amazed.</string>
    <string name="sub_frag2">Show your friends the most interesting sites in the area</string>
    <string name="sub_frag3">Come in and try what you can do with sites</string>
    <string name="sublogin_user">User</string>
    <string name="title_frag1">Welcome to Sites</string>
    <string name="title_frag2">Share with friends</string>
    <string name="title_frag3">Are you ready?</string>
    <string name="up_message">Wait a moment…</string>
    <string name="update_new">New password</string>
    <string name="update_old">Old password</string>
    <string name="wifi_message">Try again</string>
    <string name="wifi_title">Sites has not internet connection</string>
    <string name="user_edit">Edit profile</string>
    <string name="notsupported">Action not supported</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
