<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSite">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:text="@string/add"
        android:textColor="@color/colorGrey2"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/step_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="27dp"

        android:text="@string/add_step1"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/step_one_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="27dp"

        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/add_step1_ins"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_one" />

<ImageView
    android:id="@+id/img_search"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:src="@drawable/search"
    app:layout_constraintTop_toBottomOf="@+id/step_one_ins"
    android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="?attr/colorAccent"

        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/img_search"
        tools:layout_editor_absoluteX="30dp" />




</android.support.constraint.ConstraintLayout>